# NeuraRust

./: Cargo.toml  README.md
src/: main.rs  model_handler.rs
src/core/: layer.rs  layer_test.rs  mod.rs  model.rs  model_test.rs
src/functions/: activations.rs  losses.rs  losses_test.rs  metrics.rs  metrics_test.rs  mod.rs
src/optimizers/: mod.rs  optimizer.rs  rmsprop.rs
