[package]
name = "neura_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.32.3"
rand = "0.8.5"
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
rayon = "1.8.0"
indicatif = "0.17.7"
