[package]
name = "neura_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = true

[dependencies]
nalgebra = "0.32.3"
rand = "0.8.5"
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
rayon = "1.8.0"
indicatif = "0.17.7"
rand_distr = "0.4.3"
